@@ -26,6 +26,7 @@
 - extended `HTMLParser` by adding selector for prefixes, example: `node.find('xsd:')`
 - fixed parsing attributes with the `_` character in the `HTMLParser`
 - fixed parsing unpair XML elements in the `HTMLParser`
+- improved Markdown parser
 
 ========================
 0.0.5
